eclipseWorkspace/AK SFDC/src/objects/Bullhorn_Note_Link__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>UserComment_bh_ID__r.Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bullhorn Notes</relationshipLabel>
        <relationshipName>Bullhorn_Comment_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>UserComment_bh_ID__r.CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>UserComment_bh_ID__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Link</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bullhorn Notes</relationshipLabel>
        <relationshipName>Bullhorn_Comment_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Links__c</fullName>
        <formula>TEXT(UserComment_bh_ID__r.Number_of_Links__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserComment_bh_ID__c</fullName>
        <label>UserComment_bh_ID</label>
        <referenceTo>Bullhorn_Notes__c</referenceTo>
        <relationshipName>Bullhorn_Comment_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View_Note__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  UserComment_bh_ID__c , &quot;View Note&quot;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Note</label>
        <type>Text</type>
    </fields>
    <label>Bullhorn Note Link</label>
    <nameField>
        <displayFormat>bh_note_link{0000}</displayFormat>
        <label>Bullhorn Note Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bullhorn Note Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>